fixed survey row alignment

--- a/src/app/survey/shared/survey-row/survey-row.component.css
+++ b/src/app/survey/shared/survey-row/survey-row.component.css
@@ -73,8 +73,7 @@
 }
 
 .button-holder{
-	bottom: 1rem;
-	right: 1rem;
+	margin: 1em 0;
 }
 
 
@@ -85,10 +84,12 @@
 	background-color: #dbdbdb;
 	padding: 6px 10px 6px 60px;
 	border-radius: 20px;
+	margin-left: 30px;
+
 	position: relative;
 }
 
-.button-holder a::after{
+.button-holder a::before{
 	content: 'Vote!';
 	position: absolute;
 	background-color: #e74c3c;
@@ -99,3 +100,14 @@
 	top: 0;
 	padding: 6px 25px 6px 25px;
 }
+
+.f-10{
+	flex-basis: 10%;
+}
+.f-80{
+	flex-basis: 80%;
+}
+
+/*.d-flex div{
+	flex: 5;
+}*/
